Missing lists timeline configuration options.

--- a/background.html
+++ b/background.html
@@ -31,14 +31,17 @@ OptionsBackend = {
     dms_icon: true,
     favorites_on_page: false,
     favorites_icon: false,
+    lists_on_page: true,
+    lists_icon: true,
 
     idle_color: '#4880a6',
     home_color: '#9c2e2e',
     mentions_color: '#7f870b',
     dms_color: '#7f870b',
     favorites_color: '#7f870b',
+    lists_color: '#7f870b',
 
-    notification_fade_timeout: 5000,
+    notification_fade_timeout: 6000,
     theme: 'css/chromified.css,css/chromified-theme/jquery-ui-1.7.2.custom.css'
   },
   cachedOptions: null,
