--- a/options.html
+++ b/options.html
@@ -238,6 +238,12 @@ $(function() {
         <td><input type="checkbox" name="dms_icon"></td>
         <td><canvas name="dms_color" width="19" height="19" class="color_selector"></canvas></td>
       </tr>
+      <tr>
+        <td class="label">Lists:</td>
+        <td><input type="checkbox" name="lists_on_page"></td>
+        <td><input type="checkbox" name="lists_icon"></td>
+        <td><canvas name="lists_color" width="19" height="19" class="color_selector"></canvas></td>
+      </tr>
     </table><br>
     <label for="notification_fade_timeout">On Page Fade Timeout:</label>
     <input type="text" name="notification_fade_timeout" validator="required,number,positive"><br>
