--- a/background.html
+++ b/background.html
@@ -414,14 +414,14 @@ function TweetManager() {
       _this.giveMeTweets.call(_this, "dms", function() {});
       _this.giveMeTweets.call(_this, "favorites", function() {});
     },
-    function onHitsUpdated(remainingHits, nextHitsReset) {
+    function onHitsUpdated(remainingHits, nextHitsReset, hourlyLimit) {
+      var nextResetDate = new Date();
+      nextResetDate.setTime(parseInt(nextHitsReset) * 1000);
       if(remainingHits == 0) {
-        var nextResetDate = new Date();
-        nextResetDate.setTime(parseInt(nextHitsReset) * 1000);
         _this.autoClearWarning = true;
         _this.setWarning("You've exceeded API hits limit. " +
                          "Please review your refresh interval settings in the <a href='javascript:chrome.tabs.create({url:\"" + chrome.extension.getURL('options.html') + "\"})'>options page</a>. " +
-                         "Chromed Bird won't update until " + nextResetDate + ".");
+                         "Chromed Bird won't update until " + nextResetDate.toLocaleDateString() + ".");
         return;
       }
       if(_this.autoClearWarning) {
@@ -433,20 +433,17 @@ function TweetManager() {
         _this.lastAvailableHits = remainingHits;
       }
       var timeDiff = new Date() - _this.lastAvailableHitsTime;
-      console.log(timeDiff);
       if(timeDiff >= 5 * 60 * 1000) {
         var realHitsPerHour = ((_this.lastAvailableHits - remainingHits) / timeDiff) * 60 * 60 * 1000;
-        console.log('last: ' + _this.lastAvailableHits);
-        console.log('now : ' + remainingHits);
-        console.log('real/hour: ' + realHitsPerHour);
-        if(realHitsPerHour > 150) {
+        if(realHitsPerHour > hourlyLimit) {
           // If we keep this same speed we're gonna exhaust our hits limit.
           _this.tooManyHitsCount += 1;
           if(_this.tooManyHitsCount >= 2) {
             // We've exceeded the limit twice in a row, let's warn users.
             _this.setWarning("Hey! Your remaining API hits are ending too fast.<br>" +
                              "Please review your refresh interval settings in the <a href='javascript:chrome.tabs.create({url:\"" + chrome.extension.getURL('options.html') + "\"})'>options page</a>. " +
-                             "Take special care if you're running multiple Twitter clients, as they all share the same limit.");
+                             "Take special care if you're running multiple Twitter clients, as they all share the same limit.<br>" +
+                             "Available hits left: " + remainingHits + " - Next hits reset: " + nextResetDate.toLocaleDateString());
             _this.tooManyHitsCount = 0;
           }
         } else {
