Added URL shortener personal accounts & error reporting.

--- a/background.html
+++ b/background.html
@@ -16,6 +16,9 @@ OptionsBackend = {
     tweets_per_page: 10,
     max_cached_tweets: 30,
     url_shortener: 'bitly',
+    shortener_acct: false,
+    shortener_login: '',
+    shortener_key: '',
     name_attribute: 'name',
     request_timeout: 6000,
     compose_position: 'top',
